--- a/artifactory/artifactory-deployment.yaml
+++ b/artifactory/artifactory-deployment.yaml
@@ -1,10 +1,13 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: artifactory-deployment
   labels:
     app: artifactory
 spec:
+  selector:
+    matchLabels:
+      app: artifactory
   replicas: 1
   template:
     metadata:
@@ -13,7 +16,7 @@ spec:
     spec:
       containers:
       - name: artifactory
-        image: jorgeacetozi/artifactory:5.4.6
+        image: john3kuae/artifactory:5.4.6
         ports:
         - name: http-port
           containerPort: 8081
